src/test/ui/parser/issue-19398.stderr
error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `type`, `unsafe`, or `}`, found keyword `extern`
  --> $DIR/issue-19398.rs:2:5
   |
LL | trait T {
   |          - expected one of 10 possible tokens
LL |     extern "Rust" unsafe fn foo();
   |     ^^^^^^ unexpected token

error: aborting due to previous error

